# Testing

./: .editorconfig  .pre-commit-config.yaml  CODEBASE_COMPARISON.md  FORMATTING_GUIDE.md  GITHUB_INTEGRATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  MVP_COMPLETE_SUMMARY.md  Makefile  QUICK_REFERENCE.md  RUNNING_SERVERS.md  SETUP_GUIDE.md  TEAM_ACCESS_CONTROL.md  TEAM_MEMBER_PAGE_SETUP.md  alembic.ini  format_code.py  pyproject.toml  test_auth_flow.py  test_github_oauth.py
api/v1/: __init__.py
api/v1/ai/: __init__.py  ai.py  pr_analysis.py
api/v1/auth/: __init__.py  email.py  github.py  me.py
api/v1/github/: __init__.py  public_repos.py  repositories.py
api/v1/integrations/: integrations.py
api/v1/invitations/: invitations.py
api/v1/member/: __init__.py  member.py
api/v1/organizations/: organizations.py
app/controllers/: __init__.py  ai_controller.py  integration.py  invitation.py  organization.py  pull_request.py  team.py  team_member.py
app/integrations/: ai_prompts.py  ai_providers.py  enhanced_github_fetcher.py  github_fetcher.py  github_oauth.py
app/models/: __init__.py  ai_analysis.py  enums.py  event.py  integration.py  invitation.py  organization.py  pull_request.py  role.py  team.py  team_member.py  user.py
app/prompts/: prompt_registry.py
app/repositories/: __init__.py  ai_analysis.py  event.py  integration.py  invitation.py  organization.py  pull_request.py  team.py  team_member.py  user.py
app/schemas/extras/: current_user.py
app/schemas/requests/: ai_requests.py  auth.py  integration.py  invitation.py  organization.py  pr_analysis_requests.py  (+2 more)
app/services/: ai_service.py  pr_analysis_service.py
backend_copy/: .env.example  .gitignore  ai_authorship_detector.py  ai_impact_analyzer.py  ai_impact_api.py  ai_impact_models.py  api_endpoints.py  github_fetcher.py  github_oauth.py  main.py  metrics.py  models.py  pr_risk_analyzer.py  pr_risk_api.py  pr_risk_models.py  requirements.txt
backend_copy/pr_risk_data/: pr_risk_database.json
core/: config.py  server.py
core/controller/: base.py
core/factory/: factory.py
core/repository/: base.py
core/security/: access_control.py  password_handler.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalyticsTab.tsx  AuthProvider.tsx  CopilotInsights.tsx  DashboardLayout.tsx  KPITiles.tsx  LoginButton.tsx  LoginForm.tsx  MetricsQuadrants.tsx  PrimaryStatus.tsx  ProtectedRoute.tsx  PublicRepoFetcher.tsx  RepositoryPicker.tsx  Timeline.tsx
frontend_copy/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend_copy/src/: index.css  main.tsx  types.ts
migrations/versions/: 20230205035620_initial_models.py  20241002_add_team_and_hierarchy.py  20241002_team_member_page_models.py  20241201_add_ai_analysis_models.py  20250103_add_comprehensive_metadata_to_pull_requests.py  20251002210547_add_github_integration_fields_to_user_.py  20251003_add_invitations_table.py  20251003_add_organizations_and_integrations.py  20251004045503_merge_ai_analysis_and_github_integration.py  20251004213424_increase_pr_description_column_length.py  20251005013832_add_new_analysis_types_to_enum.py  20251005013905_fix_enum_values_and_add_missing_status.py  20251005014010_add_missing_aimodel_enum_values.py
scripts/: seed_organization.py  seed_team_member_data.py
(+41 files in other folders)
